--- a/react-app/package.json
+++ b/react-app/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.8",
     "bootstrap": "^5.2.3",
     "immer": "^10.1.1",
     "react": "^18.2.0",
